--- a/MadridShops/View/Base.lproj/Main.storyboard
+++ b/MadridShops/View/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13189.4" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gxq-Xu-PBS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gxq-Xu-PBS">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13165.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -46,7 +46,7 @@
                     <navigationItem key="navigationItem" title="¡MAD!" id="bhX-7a-7x7">
                         <barButtonItem key="rightBarButtonItem" systemItem="play" id="8ml-ap-b9Z">
                             <connections>
-                                <segue destination="BYZ-38-t0r" kind="show" id="iBI-kD-Qi7"/>
+                                <segue destination="BYZ-38-t0r" kind="show" identifier="ShowShopsSegue" id="iBI-kD-Qi7"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -100,7 +100,6 @@
                                         <connections>
                                             <outlet property="imageView" destination="buA-vE-P5b" id="Ubj-DZ-i9o"/>
                                             <outlet property="label" destination="Ylr-kt-Ybx" id="wdL-uk-uCz"/>
-                                            <segue destination="LMi-zl-e8F" kind="show" identifier="ShowShopDetailSegue" id="uUb-Cw-E70"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -125,6 +124,7 @@
                     <navigationItem key="navigationItem" title="Shops" id="NMh-e5-jbN"/>
                     <connections>
                         <outlet property="shopsCollectionView" destination="hMH-mF-m90" id="OsX-tN-oNi"/>
+                        <segue destination="LMi-zl-e8F" kind="show" identifier="ShowShopDetailSegue" id="HHP-nv-OKp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
