--- a/MadridShops/View/Base.lproj/Main.storyboard
+++ b/MadridShops/View/Base.lproj/Main.storyboard
@@ -104,7 +104,7 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="8Nr-Cz-qBF">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" showsUserLocation="YES" showsCompass="NO" showsPointsOfInterest="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Nr-Cz-qBF">
                                 <rect key="frame" x="0.0" y="64" width="375" height="258"/>
                             </mapView>
                         </subviews>
@@ -123,6 +123,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Shops" id="NMh-e5-jbN"/>
                     <connections>
+                        <outlet property="map" destination="8Nr-Cz-qBF" id="TKV-u2-zee"/>
                         <outlet property="shopsCollectionView" destination="hMH-mF-m90" id="OsX-tN-oNi"/>
                         <segue destination="LMi-zl-e8F" kind="show" identifier="ShowShopDetailSegue" id="HHP-nv-OKp"/>
                     </connections>
